# rtuion

./: .gitignore  Cargo.toml  LICENSE  README.html  README.md  dist-workspace.toml
src/: app.rs  error.rs  graph.rs  lib.rs  main.rs  pixela_client.rs  popup.rs  romodoro.rs  settings.rs  timer.rs  utils.rs
src/handlers/: event_handler.rs  mod.rs  pixela_handlers.rs  popup_handlers.rs  settings_handlers.rs  timer_tab_handlers.rs
src/stats/: mod.rs  pixel.rs
src/stats/pixela/: complex_pixel.rs  graph.rs  helpers.rs  mod.rs  pixela_client.rs  pixela_user.rs  subjects.rs  traits.rs  utils.rs
src/timer/: countdown.rs  helper_structs.rs  timer.rs  timer_traits.rs
src/timers/: counters.rs  helper_structs.rs  mod.rs  timer.rs  timer_traits.rs
src/ui/: app_ui.rs  assets.rs  graph.rs  helpers.rs  mod.rs  pomodoro_tab.rs  popup.rs  settings_tab.rs  stats_tab.rs  ui_utils.rs
src/utils/: beeps.rs  misc.rs  mod.rs  settings_helper_structs.rs  settings_traits.rs  tabs.rs
