[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
actually_beep = "0.1.1"
arboard = {version="3.6.1", features=["wayland-data-control"]}
chrono = "0.4.39"
crossterm = {version ="0.28.1", features=["event-stream"]}
derivative = "2.2.0"
directories = "6.0.0"
futures = "0.3.31"
num = "0.4.3"
ratatui = "0.30.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version="1.0.217", features = ["derive"]}
serde_json = "1.0.139"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tokio = {version="1", features = ["full"]}
tokio-util = "0.7.13"
toml = "0.8.20"
